--- a/myyoutube/package.json
+++ b/myyoutube/package.json
@@ -1,5 +1,6 @@
 {
   "name": "myyoutube",
+  "type":"module",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -40,6 +41,25 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-syntax-jsx": "^7.22.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.22.5",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "babel-jest": "^29.6.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.6.2",
     "tailwindcss": "^3.3.2"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   }
 }
