--- a/myyoutube/package.json
+++ b/myyoutube/package.json
@@ -12,7 +12,6 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "5.0.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -52,6 +51,7 @@
     "babel-jest": "^29.6.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.2",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.2"
   },
   "jest": {
